# simpleraytracer

./: .gitignore  CMakeLists.txt  README.md  buildrun.bat
include/: aabb.h  bvh.h  camera.h  flip_normal.h  hitable.h  hitable_list.h  image_texture.h  material.h  moving_sphere.h  perlin.h  ray.h  rect.h  sphere.h  stb_image.h  stb_image_write.h  texture.h  vec3.h
src/: main.cpp
